welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:11: error: '}' expected but 'case' found.
	case "X" => recule(); recule(); recule()
        ^BDR2:12: error: '}' expected but 'case' found.
	case "D" => avance(); avance(); avance(); avance()
        ^BDR2:13: error: illegal start of definition
	case "E" => avance(); avance(); avance(); avance(); avance()
        ^BDR2:14: error: illegal start of definition
	case "F" => avance(); avance(); avance();avance(); avance(); avance()
        ^BDR2:15: error: illegal start of definition
	case "X" => recule(); recule(); recule()
        ^BDR2:17: error: eof expected but '}' found.
} 
^